--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,4 +78,7 @@ dependencies {
     implementation 'in.payu:payu-checkout-pro:1.8.4'
     implementation 'com.github.smarteist:autoimageslider:1.4.0'
     implementation 'com.google.code.gson:gson:2.8.9' // Old 2.8.6
+
+    implementation 'com.balsikandar.android:crashreporter:1.1.0'
+//    debugCompile 'com.balsikandar.android:crashreporter:1.1.0'
 }
